# titan-app

./: .envrc  .eslintrc.json  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  Rocket.toml  package-lock.json  package.json
titan-server/: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  rocket.toml
titan-server/docs/: modules.md
titan-server/migrations/2018-04-01-210147_roster_members/: down.sql  up.sql
titan-server/migrations/2018-04-08-185218_create_roster_table/: down.sql  up.sql
titan-server/migrations/2018-07-31-031136_create_titan_branches/: down.sql  up.sql
titan-server/migrations/2018-12-03-001548_create_users_table/: up.sql
titan-server/migrations/2018-12-09-200400_create_user_files_entry_types_table/: down.sql  up.sql
titan-server/migrations/2018-12-09-200515_create_user_files_entries_table/: down.sql  up.sql
titan-server/migrations/2019-01-06-190327_add_parent_id_to_organizations/: down.sql  up.sql
titan-server/migrations/2019-01-31-222041_add_branch_avatar_column/: down.sql  up.sql
titan-server/migrations/2019-02-03-013951_create_excuses_table/: down.sql  up.sql
titan-server/migrations/2019-02-07-065305_create_organization_roles/: down.sql  up.sql
titan-server/migrations/2019-02-09-024316_create_event_types_table/: down.sql  up.sql
titan-server/migrations/2019-02-10-002648_create_organizations_users/: down.sql  up.sql
titan-server/migrations/2019-02-11-001433_add_parent_id_column_to_organizations/: down.sql  up.sql
titan-server/migrations/2019-03-20-000000_alter_myisam_to_innodb/: down.sql  up.sql
titan-server/migrations/2019-03-20-022118_create_reports_table/: up.sql
titan-server/migrations/2020-04-21-042627_add_organization_image_columns/: down.sql  up.sql
titan-server/src/: api.rs  auth_guard.rs  catchers.rs  config.rs  cors.rs  cors_fairing.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  woltlab_auth_helper.rs
titan-server/src/accounts/: acl.rs  excuses.rs  file_entries.rs  file_entry_types.rs  mod.rs  routes.rs  users.rs  wcf_users.rs
(+545 files in other folders)
