[package]
name = "titan"
version = "0.1.0"
authors = ["Eric Dattore <edattore@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "libtitan"

[[bin]]
path = "src/bin/main.rs"
name = "titan"

[dependencies]
regex = "1.0"
pwhash = "0.3"
frank_jwt = "3.1.2"
rocket = "0.4"
rocket_cors = "0.5"
lazy_static = "1.2"
rand = "0.6"
serde_json = "1.0.42"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4"
features = ["json", "databases", "diesel_mysql_pool"]

[dependencies.diesel]
version = "1.4"
features = ["mysql", "r2d2", "serde_json", "chrono"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
